# pukis-monitor

./: .replit  README.md  deployment.md  design_guidelines.md  instrumentation.ts  next.config.js  next.config.mjs  package-lock.json  package.json  process-compose.yaml  pukis.sql  pyproject.toml  replit.md  start-dev.sh  start.sh  start_backend.sh  tailwind.config.ts  tsconfig.json
.next/: _events.json  app-build-manifest.json  trace
.next/cache/: config.json
.next/server/: app-paths-manifest.json  edge-instrumentation.js  edge-runtime-webpack.js  instrumentation.js  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.json  webpack-runtime.js
.next/server/app/: page.js  page_client-reference-manifest.js
.next/server/vendor-chunks/: @babel.js  @neondatabase.js  d.js  (+50 more)
app/: layout.tsx  not-found.tsx  page.tsx
app/admin-login/: page.tsx
app/dashboard-harian/: page.tsx
app/dashboard-mtd/: page.tsx
app/expenses/: page.tsx
app/outlets/: page.tsx
attached_assets/: Pasted-Please-add-a-new-role-called-SUPER-ADMIN-and-a-simple-U_1764706909895.txt
backend/: pukis_monitoring.db  seed.py
backend/app/: database.py  main.py
client/: index.html
client/src/: App.tsx  index.css
server/: replitAuth.ts  routes.ts  storage.ts
shared/: schema.ts
src/components/: app-sidebar.tsx  authenticated-layout.tsx  metric-card.tsx  object-uploader.tsx  providers.tsx  theme-toggle.tsx  whatsapp-summary.tsx
src/db/: storage.ts
src/hooks/: use-auth.ts  useAuth.ts  useRoleAccess.ts
src/lib/: auth.ts  queryClient.ts
src/server/: objectAcl.ts
(+159 files in other folders)
